syntax = "proto3";

option csharp_namespace = "ProductService";

package Products;

service ProductCrud {
	rpc GetAll(Empty) returns (ProductList);
	rpc GetById(ProductId) returns (Product);
	rpc Create(Product) returns(Product);
	rpc Update(Product) returns(Product);
	rpc Delete(ProductId) returns(Empty);
}

message Empty{
}

message Product{
	int32 productId=1;
	string name=2;
	int32 amount=3;
	string brand=4;
	float value=5; 
}
message ProductList{
	repeated Product products =1;
}
message ProductId{
	int32 productId=1;
}
